# UGNasSync

./: CHANGELOG.md  Cargo.toml  README.md  VERSIONING.md  config.toml.example
Documentation/: ProductSpecification.md  README.md  RELEASE_CHECKLIST.md  SMB_Mount_Guide.md
etc/systemd/: README.md  ugnassync-watch.service  ugnassync.service  ugnassync.timer
src/: config.rs  conflict.rs  logging.rs  main.rs  smb.rs  sync.rs  watch.rs
