[package]
name = "UGNasSync"
version = "0.1.0"
edition = "2021"
authors = ["Immanuel Jeyaraj <irj@sefier.com>"]
license = "GPL-3.0"
description = "Automated NAS synchronization tool using rsync"

[[bin]]
name = "ugnassync"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
notify = "6.1"
rusqlite = { version = "0.30", features = ["bundled"] }
anyhow = "1.0"
chrono = "0.4"
sha2 = "0.10"
